syntax = "proto3";

option java_package = "com.terminus.future_x7.beans";
package TslQRInfo;

message QRInfo {
    string deviceId = 1;           
    int64 projectId = 2;
    int64 timestamp = 3;
}